[GD] Dodanie ustawien widoku

--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -16,6 +16,12 @@
             <setting name="ativeTime" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="visibleCommunicationWindowMax" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="visibleCommunicationChoiceMax" serializeAs="String">
+                <value>5</value>
+            </setting>
         </WindowsFormsApp1.Properties.Settings>
     </userSettings>
 </configuration>
