--- a/WindowsFormsApp1/Properties/Settings.settings
+++ b/WindowsFormsApp1/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="ativeTime" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="visibleCommunicationWindowMax" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="visibleCommunicationChoiceMax" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">5</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
