--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -13,7 +13,7 @@
             <setting name="comminication_selection_option" serializeAs="String">
                 <value>1</value>
             </setting>
-            <setting name="ativeTime" serializeAs="String">
+            <setting name="activeTime" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="visibleCommunicationWindowMax" serializeAs="String">
