--- a/WindowsFormsApp1/Properties/Settings.settings
+++ b/WindowsFormsApp1/Properties/Settings.settings
@@ -5,7 +5,7 @@
     <Setting Name="comminication_selection_option" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
-    <Setting Name="ativeTime" Type="System.Decimal" Scope="User">
+    <Setting Name="activeTime" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="visibleCommunicationWindowMax" Type="System.Decimal" Scope="User">
