--- a/WindowsFormsApp1/App.config
+++ b/WindowsFormsApp1/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MarnikProjekt.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="WindowsFormsApp1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,23 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
+        <MarnikProjekt.Properties.Settings>
+            <setting name="comminication_selection_option" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="activeTime" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="visibleCommunicationWindowMax" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="visibleCommunicationChoiceMax" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="pathToDefaultMessageSet" serializeAs="String">
+                <value />
+            </setting>
+        </MarnikProjekt.Properties.Settings>
         <WindowsFormsApp1.Properties.Settings>
             <setting name="comminication_selection_option" serializeAs="String">
                 <value>1</value>
