--- a/WindowsFormsApp1/Properties/Settings.settings
+++ b/WindowsFormsApp1/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WindowsFormsApp1.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MarnikProjekt.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="comminication_selection_option" Type="System.Int32" Scope="User">
@@ -13,6 +13,9 @@
     </Setting>
     <Setting Name="visibleCommunicationChoiceMax" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">5</Value>
+    </Setting>
+    <Setting Name="pathToDefaultMessageSet" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
